--- a/Evoke/Evoke.Smartvoke.WebApp/Views/Signin/Index.cshtml
+++ b/Evoke/Evoke.Smartvoke.WebApp/Views/Signin/Index.cshtml
@@ -75,7 +75,7 @@ position: absolute;
 
     $(document).ready(function () {
         $(document).keypress(function (event) {
-            console.log("submitting form via keypress");
+            console.log("submitting form s via keypress");
             if (event.which == 13) {
                 event.preventDefault();
                 login();
